...
    <string name="expiry_date">Vencimento</string>
    <string name="cvv">CVV</string>
    <string name="error_required_field">Campo obrigatório</string>
    <string name="error_card_number_length">O numero do cartão deve conter 16 dígitos</string>
    <string name="error_expiry_date_not_valid">Data inválida</string>
    <string name="error_cvv_length">O CVV deve conter 3 dígitos</string>
    <string name="save">Salvar</string>

    // Payment
    <string name="currency_symbol">R$</string>
    <string name="card_brand_and_initial_number">Mastercard %1$s •</string>
    <string name="pay">Pagar</string>
    <string name="edit">EDITAR</string>
...
    <string name="receipt_partial_value">R$&#160;&#160;%1$s</string>
    <string name="total_paid">Total pago</string>
    <string name="receipt_total_value">R$%1$s</string>

    // Dialog strings
    <string name="error">Erro</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="no_internet">Verifique sua conexão com a internet e tente novamente.</string>
    <string name="retry">Tentar novamente</string>

</resources>

