...
    <br.com.picpay.picpay.custom.Form
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <br.com.picpay.picpay.custom.TitleEditText
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:customInputType="VALUE"
...

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm" />

    </LinearLayout>
...
